--- a/playbooks/setup_troposphere.yml
+++ b/playbooks/setup_troposphere.yml
@@ -24,7 +24,7 @@
         APP_BASE_DIR: "{{ TROPOSPHERE_LOCATION }}",
         REQUIREMENTS_FILE_NAME: 'dev_requirements.txt',
         VIRTUAL_ENV: "{{ VIRTUAL_ENV_TROPOSPHERE }}",
-        PIP_EXTRA_ARGS: '--no-cache-dir',
+        #PIP_EXTRA_ARGS: '--no-cache-dir',
         tags: ['troposphere', 'pip-install-requirements']}
 
     - { role: app-config-logging,
